# weathr-saver

./: .gitignore  README.md  test_dylib  test_dylib.c
.github/workflows/: build.yml
macos-screensaver/: project.yml
macos-screensaver/WeatherSaver.xcodeproj/: project.pbxproj
macos-screensaver/WeatherSaver/Resources/: Info.plist
macos-screensaver/WeatherSaver/Sources/: ConfigureSheetController.swift  WeatherSaverView.m  WeatherSaverView.swift  weathr.h
weathr-core/: Cargo.toml  test.c
weathr-core/examples/: test.rs
weathr-core/src/: lib.rs  renderer.rs  scene.rs  weather.rs
