[package]
name = "weathr"
version = "1.0.0"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Weather rendering library with C ABI for macOS ScreenSaver"

[lib]
name = "weathr"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
rand = "0.8"
chrono = { features = ["serde"], version = "0.4" }
once_cell = "1.19"
parking_lot = "0.12"

[profile.release]
lto = "thin"
codegen-units = 1
strip = false
opt-level = "z"
